--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" href="styles/style.css"/>
 		<title>victor henrique</title>
-		<link rel="website icon" href="imagens/logo.ico">
+		<link rel="icon" type="image,/x-icon href="imagens/logo.ico">
 </head>
 <body>
 		<header>
